2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>