2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N200000011uvsEAA</relationshipName>
    <type>Lookup</type>
</CustomField>