2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/bill_dd__c.field-meta.xml
<CustomField>
    <fullName>bill_dd__c</fullName>
    <label>bill_dd</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>