2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Billing_Date_Imported__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date_Imported__c</fullName>
    <formula>DATE( If( bill_yy__c &lt; 10, 2000 + bill_yy__c , 1900 + bill_yy__c) , bill_mm__c , bill_dd__c )</formula>
    <label>Billing up to</label>
    <type>Date</type>
</CustomField>