2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/C2_total_vol_cbm__c.field-meta.xml
<CustomField>
    <fullName>C2_total_vol_cbm__c</fullName>
    <description>C2 total volume in cbm</description>
    <label>C2 (total vol. cbm)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>