2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Case_1__c.field-meta.xml
<CustomField>
    <fullName>Case_1__c</fullName>
    <description>Case 1 dimensions</description>
    <label>Case 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>