2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Case_2__c.field-meta.xml
<CustomField>
    <fullName>Case_2__c</fullName>
    <description>Case 2 dimensions</description>
    <label>Case 2</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>