2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Case_3__c.field-meta.xml
<CustomField>
    <fullName>Case_3__c</fullName>
    <description>Case 3 dimensions</description>
    <label>Case 3</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>