2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N200000011uxmEAA</relationshipName>
    <type>Lookup</type>
</CustomField>