2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Date_In_Imported__c.field-meta.xml
<CustomField>
    <fullName>Date_In_Imported__c</fullName>
    <formula>DATE( If( di_yy__c &lt; 10, 2000 + di_yy__c , 1900 + di_yy__c) , di_mm__c , di_dd__c )</formula>
    <label>Date In</label>
    <type>Date</type>
</CustomField>