2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Date_Out_Imported__c.field-meta.xml
<CustomField>
    <fullName>Date_Out_Imported__c</fullName>
    <formula>DATE( If( do_yy__c &lt; 10, 2000 + do_yy__c , 1900 + do_yy__c) , do_mm__c , do_dd__c )</formula>
    <label>Date Out</label>
    <type>Date</type>
</CustomField>