2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/di_mm__c.field-meta.xml
<CustomField>
    <fullName>di_mm__c</fullName>
    <label>di_mm</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>