2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/di_yy__c.field-meta.xml
<CustomField>
    <fullName>di_yy__c</fullName>
    <label>di_yy</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>