2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/do_dd__c.field-meta.xml
<CustomField>
    <fullName>do_dd__c</fullName>
    <label>do_dd</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>