2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>duration of complimentary storage (days)</description>
    <label>Duration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>