2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/FOC_storage__c.field-meta.xml
<CustomField>
    <fullName>FOC_storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOC storage</label>
    <type>Checkbox</type>
</CustomField>