2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Grand_vol__c.field-meta.xml
<CustomField>
    <fullName>Grand_vol__c</fullName>
    <formula>C2_total_vol_cbm__c   +  Case_total_vol_cbm__c  +  Loose_total_vol_cbm__c  +  Pallet_total_vol_cbm__c  +   STD_total_vol_cbm__c + Triwall_total_vol_cbm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total (cbm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>