2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/JN1__c.field-meta.xml
<CustomField>
    <fullName>JN1__c</fullName>
    <label>JN1</label>
    <length>2</length>
    <type>Text</type>
</CustomField>