2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/JN2__c.field-meta.xml
<CustomField>
    <fullName>JN2__c</fullName>
    <description>Year</description>
    <label>JN2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>