2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/JN3__c.field-meta.xml
<CustomField>
    <fullName>JN3__c</fullName>
    <description>No.</description>
    <label>JN3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>