2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Job_no__c.field-meta.xml
<CustomField>
    <fullName>Job_no__c</fullName>
    <description>IM/06/1234/SP/MP</description>
    <label>Job no</label>
    <length>16</length>
    <type>Text</type>
</CustomField>