2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Job_Number_Imported__c.field-meta.xml
<CustomField>
    <fullName>Job_Number_Imported__c</fullName>
    <description>Job Number</description>
    <formula>JN1__c &amp; &quot;/&quot; &amp; JN2__c &amp; &quot;/&quot; &amp; JN3__c &amp; &quot;/&quot; &amp; JN4__c &amp; &quot;/&quot; &amp; JN5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>