2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Location_Text__c</fullName>
    <label>Location Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>