2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Loose__c.field-meta.xml
<CustomField>
    <fullName>Loose__c</fullName>
    <description>No. of pieces in loose</description>
    <label>Loose (pcs)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>