2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Loose_no_of_pkgs__c.field-meta.xml
<CustomField>
    <fullName>Loose_no_of_pkgs__c</fullName>
    <description>number of packages loose</description>
    <label>Loose (no of pkgs)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>