2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Loose_total_vol_cbm__c.field-meta.xml
<CustomField>
    <fullName>Loose_total_vol_cbm__c</fullName>
    <description>Total loose volume in cbm</description>
    <label>Loose (total vol, cbm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>