2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Pallet_1__c.field-meta.xml
<CustomField>
    <fullName>Pallet_1__c</fullName>
    <label>Pallet 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>