2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Pallet_2__c.field-meta.xml
<CustomField>
    <fullName>Pallet_2__c</fullName>
    <label>Pallet 2</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>