2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Pallet_total_vol_cbm__c.field-meta.xml
<CustomField>
    <fullName>Pallet_total_vol_cbm__c</fullName>
    <description>Pallet total vol in cbm</description>
    <label>Pallet (total vol. cbm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>