2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Retrieval_date_1__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_date_1__c</fullName>
    <label>Retrieval date 1</label>
    <type>Date</type>
</CustomField>