2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/STD__c.field-meta.xml
<CustomField>
    <fullName>STD__c</fullName>
    <description>number of standard liftvans</description>
    <label>STD</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>