2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/STD_total_vol_cbm__c.field-meta.xml
<CustomField>
    <fullName>STD_total_vol_cbm__c</fullName>
    <formula>STD__c * 9.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STD (total vol. cbm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>