2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Total_packages__c.field-meta.xml
<CustomField>
    <fullName>Total_packages__c</fullName>
    <description>Total number of packages in storage</description>
    <label>Total packages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>