2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Triwall_1__c.field-meta.xml
<CustomField>
    <fullName>Triwall_1__c</fullName>
    <label>Triwall 1</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>