2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Triwall_3__c.field-meta.xml
<CustomField>
    <fullName>Triwall_3__c</fullName>
    <label>Triwall 3</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>