2nd training/Community/Community/Community1/force-app/main/default/objects/Warehouse__c/fields/Triwall_total_vol_cbm__c.field-meta.xml
<CustomField>
    <fullName>Triwall_total_vol_cbm__c</fullName>
    <description>Triwall total volume in cbm</description>
    <label>Triwall (total vol. cbm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>